[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "userdefaults3"
author = "Ong Yong Xin"
author-email = "ongyongxin2020+github@gmail.com"
home-page = "https://github.com/ongyx/tankobon"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description-file = "README.md"
requires = [
    "rubicon-objc",
]
requires-python = ">=3.6"
